[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/RadioQuestC.gd" id="1_script"]
[ext_resource type="Theme" path="res://ui/theme_noir_detective.tres" id="2_theme"]
[ext_resource type="Script" path="res://scenes/TimeKnob.gd" id="3_knob_script"]
[ext_resource type="PackedScene" path="res://ui/overlays/NoirOverlay.tscn" id="4_noir"]
[ext_resource type="Script" path="res://ui/overlays/NoirOverlay.gd" id="4_w857s"]

[node name="RadioQuestC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.07, 0.08, 1)

[node name="NoirOverlay" type="CanvasLayer" parent="." instance=ExtResource("4_noir")]
layer = 100
script = ExtResource("4_w857s")
intensity = 0.18
fx_quality = 1
tint_color = Color(0.93, 0.93, 0.93, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="RootVBox" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="PanelContainer" parent="SafeArea/RootVBox"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2

[node name="TopBarHBox" type="HBoxContainer" parent="SafeArea/RootVBox/TopBar"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BtnBack" type="Button" parent="SafeArea/RootVBox/TopBar/TopBarHBox"]
custom_minimum_size = Vector2(120, 58)
layout_mode = 2
text = "<-"

[node name="TitleLabel" type="Label" parent="SafeArea/RootVBox/TopBar/TopBarHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "ЗАГОЛОВОК"

[node name="ModeChip" type="Label" parent="SafeArea/RootVBox/TopBar/TopBarHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "РЕЖИМ"

[node name="StabilityLabel" type="Label" parent="SafeArea/RootVBox/TopBar/TopBarHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "СТАБИЛЬНОСТЬ"

[node name="BodyHSplit" type="HSplitContainer" parent="SafeArea/RootVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 760

[node name="LeftCol" type="VBoxContainer" parent="SafeArea/RootVBox/BodyHSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="MissionCard" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="MissionMargin" type="MarginContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="MissionVBox" type="VBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard/MissionMargin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MissionTitle" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard/MissionMargin/MissionVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "МИССИЯ"

[node name="TaskLine1" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard/MissionMargin/MissionVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "СТРОКА1"

[node name="TaskLine2" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard/MissionMargin/MissionVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "СТРОКА2"

[node name="TaskLine3" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard/MissionMargin/MissionVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
text = "СТРОКА3"

[node name="MicroHint" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/MissionCard/MissionMargin/MissionVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.75, 0.75, 0.75, 1)
text = "ПОДСКАЗКА"
autowrap_mode = 2

[node name="KnobCard" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol"]
layout_mode = 2
size_flags_vertical = 3

[node name="KnobMargin" type="MarginContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="KnobVBox" type="VBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Step1Label" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ШАГ1"

[node name="KnobCenter" type="CenterContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeKnob" type="Control" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox/KnobCenter"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2
script = ExtResource("3_knob_script")
min_value = 0.0
max_value = 30.0
step = 0.1
start_angle_deg = -225.0
end_angle_deg = 45.0
value = 0.0

[node name="EstimateValue" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "t = 0.0"
horizontal_alignment = 1

[node name="FineButtonsRow" type="HBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnMinus1" type="Button" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox/FineButtonsRow"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "-1"

[node name="BtnMinus01" type="Button" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox/FineButtonsRow"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "-0.1"

[node name="BtnPlus01" type="Button" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox/FineButtonsRow"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "+0.1"

[node name="BtnPlus1" type="Button" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox/FineButtonsRow"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "+1"

[node name="BtnAnalyze" type="Button" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/KnobCard/KnobMargin/KnobVBox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "АНАЛИЗ"

[node name="StatusCard" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="StatusMargin" type="MarginContainer" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/StatusCard"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="StatusLabel" type="Label" parent="SafeArea/RootVBox/BodyHSplit/LeftCol/StatusCard/StatusMargin"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "СТАТУС"
autowrap_mode = 2

[node name="RightCol" type="VBoxContainer" parent="SafeArea/RootVBox/BodyHSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="RiskCard" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol"]
layout_mode = 2
size_flags_vertical = 3

[node name="RiskMargin" type="MarginContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="RiskVBox" type="VBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Step2Label" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ШАГ2"

[node name="DetectionTitle" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "ОБНАРУЖЕНИЕ"

[node name="DetectionBar" type="ProgressBar" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
show_percentage = false

[node name="DetectCountdown" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "--"

[node name="TransferTitle" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "ПЕРЕДАЧА"

[node name="TransferBar" type="ProgressBar" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
show_percentage = false

[node name="TransferCountdown" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "--"

[node name="RiskLabel" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/RiskCard/RiskMargin/RiskVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "РИСК"

[node name="ActionsCard" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="ActionsMargin" type="MarginContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="ActionsVBox" type="VBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Step3Label" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ШАГ3"

[node name="PrimaryActionsRow" type="HBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnRisk" type="Button" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/PrimaryActionsRow"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "РИСК"

[node name="BtnAbort" type="Button" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/PrimaryActionsRow"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "ПРЕРВАТЬ"

[node name="SecondaryActionsRow" type="HBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnUnits" type="Button" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SecondaryActionsRow"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ЕДИНИЦЫ"

[node name="BtnDetails" type="Button" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SecondaryActionsRow"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ДЕТАЛИ"

[node name="BtnNext" type="Button" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SecondaryActionsRow"]
visible = false
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ДАЛЕЕ"

[node name="SampleStrip" type="HBoxContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Sample1" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample1"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample1"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="Sample2" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample2"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="Sample3" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample3"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample3"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="Sample4" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample4"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample4"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="Sample5" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample5"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample5"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="Sample6" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample6"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample6"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="Sample7" type="PanelContainer" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip"]
custom_minimum_size = Vector2(42, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="BG" type="ColorRect" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample7"]
layout_mode = 2
color = Color(0.18, 0.18, 0.18, 1)

[node name="AnchorMark" type="Label" parent="SafeArea/RootVBox/BodyHSplit/RightCol/ActionsCard/ActionsMargin/ActionsVBox/SampleStrip/Sample7"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "A"
horizontal_alignment = 1

[node name="DetailsOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Dim" type="ColorRect" parent="DetailsOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.6)

[node name="BottomSheet" type="PanelContainer" parent="DetailsOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.3
anchor_right = 0.88
anchor_bottom = 0.94
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SheetMargin" type="MarginContainer" parent="DetailsOverlay/BottomSheet"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="SheetVBox" type="VBoxContainer" parent="DetailsOverlay/BottomSheet/SheetMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SheetTitle" type="Label" parent="DetailsOverlay/BottomSheet/SheetMargin/SheetVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ДЕТАЛИ"

[node name="SheetText" type="RichTextLabel" parent="DetailsOverlay/BottomSheet/SheetMargin/SheetVBox"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_vertical = 3

[node name="BtnCloseDetails" type="Button" parent="DetailsOverlay/BottomSheet/SheetMargin/SheetVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "ЗАКРЫТЬ"

[node name="AlarmFlash" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.05, 0.05, 0)
